--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 			<hr>
 				<h3>
-					CJ E&M MezzoMedia Product Manager November 2014 - Now
+					CJ E&M MezzoMedia / Product Manager / November 2014 - Now
 				</h3>
 				<div style="margin-top:13px" class="subHeader fontBr">
 	AD Tech Platform Planning
@@ -68,7 +68,7 @@
 				<hr style="border-style:dashed;">
 
 				<h3>
-					Bluebird Marketing staff July 2013 - April 2014
+					Bluebird / Marketing Staff / July 2013 - April 2014
 				</h3>
 
 				<div style="font-size:14px" class="fontRe">
@@ -78,7 +78,7 @@
 				</div>
 				<hr style="border-style:dashed;">
 						<h3>
-					NHN Search Marketing Account Manager April 2011 - March 2013
+					NHN Search Marketing / Account Manager / April 2011 - March 2013
 				</h3>
 
 				<div style="font-size:14px" class="fontRe">
