h3클래스 수정

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 				</div> <!--bodyHeader-->
 
 			<hr>
-				<h3>
+				<div style="font-size:20px;" class="fontBr">
 					CJ E&M MezzoMedia / Product Manager / November 2014 - Now
-				</h3>
+				</div>
 				<div style="margin-top:13px" class="subHeader fontBr">
 	AD Tech Platform Planning
 </div>
@@ -67,9 +67,9 @@
 
 				<hr style="border-style:dashed;">
 
-				<h3>
+				<div style="font-size:20px;" class="fontBr">
 					Bluebird / Marketing Staff / July 2013 - April 2014
-				</h3>
+				</div>
 
 				<div style="font-size:14px" class="fontRe">
 					* Web service management <br>
@@ -77,9 +77,9 @@
 					* Local/Overseas Sales support <br>
 				</div>
 				<hr style="border-style:dashed;">
-						<h3>
+						<div style="font-size:20px;" class="fontBr">
 					NHN Search Marketing / Account Manager / April 2011 - March 2013
-				</h3>
+				</div>
 
 				<div style="font-size:14px" class="fontRe">
 					* Search Engine Marketing planning <br>
@@ -112,7 +112,7 @@
 
 				<div style="font-size:14px" class="fontRe">
 					<hr>
-					<h3>Tools</h3>
+					<div style="font-size:20px;" class="fontBr">Tools</div>
 					* MS Excel<br>
 					* MS Word <br>
 					* MS PowerPoint<br>
@@ -120,7 +120,8 @@
 					* Adobe Photoshop <br>
 					* SQL
 					<br>
-					<h3>Licenses</h3>
+					<br>
+					<div style="font-size:20px;" class="fontBr">Licenses</div>
 					* GAIQ(Google Analytics Individual Qualification)<br>
 					* Driver's Licenses
 				</div>
