--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 
 	<head>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-59009941-2"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-59009941-2');
+		</script>
+
 			<meta charset="UTF-8">
 			<link rel="stylesheet" href="pf2.css">
 				<script
