--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 	AD Tech Platform Planning
 </div>
 				<div style="font-size:14px" class="fontRe">
-					  * Project Facebook Marketing solution(2018 - ) <br>
+					  * Project "TargetPick" - Audience Targeting solution(2018 - Now) <br>
 					  * Project <a href="http://a-plus.meba.kr" target="_blank">Man-plus Publisher center</a>(2016 - 2017) <br>
 					  * Project X-plus DMP(2015 - 2017)<br>
-					  * Project S-plus Mobile network(2015 - 2016)<br>
+					  * Project S-plus Mobile AD network platform(2015 - 2016)<br>
 					</div>
 					<div style="margin-top:13px" class="subHeader fontBr">Web Service Planning </div>
 							<div style="font-size:14px" class="fontRe">
