--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<div style="font-size:40px;" class="fontBr">
 							Yang, Chansup
 						</div>
-						<p class="fontRe" style="margin:1px;">Sung-nam, South Korea | (C) +82-10-9001-1209 | <a href="mailto:wasabi1209@gmail.com">wasabi1209@gmail.com</a></p>
+						<p class="fontRe" style="margin:1px;">South Korea | <a href="mailto:wasabi1209@gmail.com">wasabi1209@gmail.com</a></p>
 					</div>
 				</div>
 			<div class="bodyWrapper">
